# systemd_ros

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
etc/: systemd_log4cxx.conf  systemd_log4cxx_no_output.conf  systemd_log4cxx_with_rosout.conf  systemd_log4cxx_without_rosout.conf  systemd_logging.conf  systemd_logging_stdout.conf  systemd_logging_with_rosout.conf  systemd_logging_without_rosout.conf
include/systemd_ros/: log_appender.h
nodes/: nodelet_manager.cpp
scripts/: generate-services  param-manager  remote-env.sh  systemd-roscore  systemd_env.sh
share/: log_appenders.xml  sample.launch  sample.yaml
src/systemd_ros/: __init__.py  config_parser.py  journal_handler.py  log_appender.cpp  param_manager.py  roscore.py  service_generator.py
systemd/: roscore.service  roscore.socket
