<?xml version="1.0"?>
<package format="2">
  <name>systemd_ros</name>
  <version>1.0.1</version>
  <description>systemd support for ROS</description>
  <maintainer email="grimm@magazino.eu">Markus Grimm</maintainer>
  <author>Markus Grimm</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python-systemd</exec_depend>

  <export></export>
</package>
