<?xml version="1.0"?>
<package format="2">
  <name>systemd_ros</name>
  <version>1.9.0</version>
  <description>systemd support for ROS</description>
  <maintainer email="grimm@magazino.eu">Markus Grimm</maintainer>
  <author>Markus Grimm</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>python-argparse</exec_depend>
  <exec_depend>python-rospkg</exec_depend>
  <exec_depend>python-six</exec_depend>
  <exec_depend>python-systemd</exec_depend>
  <exec_depend>python-yaml</exec_depend>
  <exec_depend>rosgraph</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rosmaster</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <build_depend>nodelet</build_depend>

  <export></export>
</package>
