<?xml version="1.0"?>
<package format="3">
  <name>systemd_ros</name>
  <version>1.10.0</version>
  <description>systemd support for ROS</description>
  <maintainer email="grimm@magazino.eu">Markus Grimm</maintainer>
  <author>Markus Grimm</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-six</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-six</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-systemd</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-systemd</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-yaml</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-yaml</exec_depend>
  <exec_depend>rosgraph</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rosmaster</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <build_depend>nodelet</build_depend>
</package>
